--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     if (matchingImages.length > 0) {
     displayImages(matchingImages, resultContainer);
     } else {
-    resultContainer.innerHTML = 'Surekha U R Image Not Found In Microintel DATABASE , Will Upload Soon';
+    resultContainer.innerHTML = 'Suma U R Image Not Found In Microintel DATABASE , Will Upload Soon';
     }
     }
     </script>
